--- a/papers/LOPSRT-23/main.bib
+++ b/papers/LOPSRT-23/main.bib
@@ -20,7 +20,7 @@ author = "Mads Torgersen and Erik Ernst and Hansen, {Christian Plesner}",
 year = "2005",
 language = "English",
 booktitle = "Proceedings of FOOL 12",
-note = "The Twelth International Workshop on Foundations of Object-Oriented Languages ; Conference date: 15-01-2005",
+note = "The Twelth International Workshop on Foundations of Object-Oriented Languages; Conference date: 15-01-2005",
 }
 
 @article{JGTC,
@@ -607,8 +607,31 @@ doi="10.1007/3-540-36377-7_13",
 url="https://doi.org/10.1007/3-540-36377-7_13"
 }
 
+@inproceedings{rinv,
+author = {Kawabe, Masahiko and Gl{\"u}ck, Robert},
+year = {2005},
+month = {01},
+pages = {219-234},
+title = {The Program Inverter LRinv and Its Structure},
+volume = {3350},
+isbn = {978-3-540-24362-5},
+journal = {Lecture Notes in Computer Science},
+doi = {10.1007/978-3-540-30557-6_17}
+}
+
+@article{ura,
+author = {Abramov, Sergei and Gl{\"u}ck, Robert},
+year = {2002},
+month = {05},
+pages = {193-229},
+title = {The Universal Resolving Algorithm and Its Correctness: Inverse Computation in a Functional Language},
+volume = {43},
+journal = {Science of Computer Programming},
+doi = {10.1016/S0167-6423(02)00023-0}
+}
+
 @article{SemanticsModifiers,
-author = {ABRAMOV, SERGEI and GL\"{U}CK, ROBERT},
+author = {Abramov, Sergei and Gl\"{u}ck, Robert},
 title = {FROM STANDARD TO NON-STANDARD SEMANTICS BY SEMANTICS MODIFIERS},
 journal = {International Journal of Foundations of Computer Science},
 volume = {12},
