--- a/papers/LOPSRT-23/main.tex
+++ b/papers/LOPSRT-23/main.tex
@@ -79,6 +79,13 @@ morecomment=[s]{(*}{*)}
 
 \setlength{\belowcaptionskip}{-22pt}
 
+\usepackage[nodisplayskipstretch]{setspace}
+
+%\setlength{\abovedisplayskip}{-5pt}
+%\setlength{\belowdisplayskip}{-5pt}
+
+\renewcommand{\arraystretch}{0.3}
+
 \pagestyle{plain}
 %\usepackage{lineno}
 %\linenumbers
