--- a/papers/LOPSRT-23/rel.tex
+++ b/papers/LOPSRT-23/rel.tex
@@ -82,8 +82,7 @@ Thus, a single relational definition can be run in various ``directions'', solvi
 
 Finally, in many cases it is easier to obtain relational specification from functional one. For example,
 relational addition can be easily converted from more conventional functional code (see Fig.~\ref{addition}\ref{fun-add}).
-
-For our task we use a tool, called \textsc{noCanren}, to perform a typed relational conversion\cite{lozov2017typed}, for which its static and dynamic
+For our task we use a tool, called \textsc{noCanren}, to perform \emph{typed relational conversion}\cite{lozov2017typed}, for which its static and dynamic
 correctness was proven formally. Thus, our solution is a mixture of a hand-written and converted relational code and, in fact, a few
 different solvers.
 
