--- a/papers/LOPSRT-23/eval.tex
+++ b/papers/LOPSRT-23/eval.tex
@@ -4,7 +4,7 @@
 We evaluated our solver for a class table containing more than 40000 classes exported by the symbolic execution engine using
 nine benchmark queries of various shapes. The results are presented in Fig.~\ref{fig:eval-diagram} in the form of
 a bar chart. Here the groups of four bars correspond to different benchmarks, each bar in the group corresponds to a one of
-four versions of the solver (left-to-right): with no optimizations, with dynamic transitive closure only, with dynamic class table specialization only,
+four versions of the solver (left-to-right): with no optimizations, with dynamic transitive closure ealuation only, with dynamic class table specialization only,
 and with both optimizations enabled.
 
 The benchmark queries are as follows:
