--- a/papers/LOPSRT-23/solver.tex
+++ b/papers/LOPSRT-23/solver.tex
@@ -11,16 +11,14 @@ A simple observation, however, makes its obvious that it is in fact much easier 
 in relational language. Indeed, given relation $R$ its reflexive-transitive $R^*$ closure can be expressed by just
 
 \[
-R^*\,(x,\, y) = R\, (x,\, y)\vee x\equiv y\vee\exists\, z\,.\,R\,(x,\,z)\wedge R^*\,(z,\,y)
+R^*\,(x,\, y) = R\, (x,\, y)\vee x\equiv y\vee\exists\, z\,.\,R\,(x,\,z)\wedge R^*\,(z,\,y)\eqno{(\star)}
 \]
 
 which can be easily directly encoded in \textsc{OCanren}. However, from the implementation standpoint the application of this technique
 imposes a certain problem since ``$\prec$'' and ``$\precprec$'' are mutually recursive, and we expect ``$\prec$'' to be obtained as a
 result of relational conversion of functional implementation.
 
-We discuss now the implementation of functional verifier. We do not present the code right here for space considerations but provide
-a link\footnote{https://github.com/dboulytchev/JGS/blob/main/src/JGS.ml} to a complete commented source code. The verifier is
-implemented in \textsc{OCaml} in a rather direct manner: we encode types as data structures of certain types and give a
+Functional verifier is implemented in \textsc{OCaml} in a straightforward manner: we encode types as data structures of certain types and give a
 direct implementation for all components of subtyping relation except the transitive closure. All these definitions are ``wrapped'' in a
 functor (an \textsc{OCaml} module parameterized by a module) which takes \emph{class table} as a parameter. The class table
 contains the definitions of relevant set of classes with their direct supertyping encoding, description of their type parameters, etc.
@@ -41,13 +39,48 @@ Thus, functional verifier can only check the subtyping of types no more then two
 The next step is applying relational conversion for this functional verifier. For technical reasons this requires a mild
 ``massaging'' of initial \textsc{OCaml} implementation: arrays (more efficient in functional world) have to be replaced
 with lists, and some changes have to be made in order to compensate for the incompleteness of current relational
-conversion implementation. Again, we do not show the code here, but provide a link to a complete implementation\footnote{https://github.com/Lozov-Petr/JGS/blob/noCanren/src/JGS.noc.ml}.
+conversion implementation.
 After the relational conversion and the parameterization of verifier functor with a classtable a proper recursive knot is tied by a transitive closure of ``$\prec$'', which
 completes the construction of the solver. While functional verifier can only work for ground types and return a boolean value, its relational counterpart
 searches for all substitution for free variables in incomplete types is order to make them subtype each other.
 
-Upon reading this section one may feel dissatisfaction~--- indeed, the (presumably) most interesting and essential part of the paper discusses nothing more
-than some technical issues of encoding the set of formal definitions given earlier. But this is, actually, the very essence of the approach we advocate~---
-no specific efforts have to be made in order to come up with domain-specific solver. 
+Our first evaluatio discovered the fact that the solver was unsound~--- it established the subtyping relation for two arbitrary types. This finding constitutes a drastic
+contradiction with the theory which predicts that the solver has to be correct by construction. The careful analysis, however, discovered that functional
+vefifier was unsound as well! The reason was very simple: let us have two arbitrary types $A$ and $B$. To establish, for example, that $A \precprec B$, take a
+type variable $\alpha^B_A$ with upper bound $B$ and lower bound $A$. Then, by definition
 
+\[
+A\precprec \alpha^B_A \wedge \alpha^B_A\precprec B \Rightarrow A\precprec B
+\]
 
+In the JLS there were no explicit requirement for lower/upper bounds of type variables to respect the subtyping relation, thus this requirement was not
+encoded in the verifier. Another finding of the evaluation was that, contrary to the expectation, the direct supertyping relation is actually
+reflexive (in full accordance with the JLS).
+
+After fixing the unsoundness we found that the performance of the solver was very low: it took seconds to come up with the first solution even for
+small hard-written class tables. After a careful analysis we come up with the following optimizations.
+
+First, we changed the representation of class/iterface indentifiers. In functional verifier all identifiers were represented by integer numbers which,
+under relational conversion, were tuned into natural numbers in Peano form (essentially, lists). At the same time as no transformation are
+performed on indentifiers (besides equality checks) this repesentation is excessive. We manually reverted the indentifiers representation to
+integers.
+
+Then, we optimized the search in class tables. Functional verifier sometimes needs to find a declaration of a class/interface by identifier, or
+find a superclass/superinterface for a class given this class identifier, etc. Under relational conversion all these procedures
+take form of disjunctions of the length proportional to the size of the class table. However, when some of the involved identifiers
+are ground the search can be optimized: we can query a precomiled optimized map-like structure of the class table to filter out
+only relevent information and synthesize the residual disjunction at the runtime. We call this optimization \emph{dynamic class table specialization}.
+
+Finally, we optimize the evaluation of transitive closure based on the groundness analysis of the arguments. For example, if we need to find a certain
+$x$ such that $R^*\,(x,\,y)$ where $y$ is \emph{ground}, then the following (equivalent to $(\star)$) procedure of finding transitive closure is
+found to be more efficient:
+
+\[
+R^*\,(x,\, y) = R\, (x,\, y)\vee x\equiv y\vee\exists\, z\,.\,R\,(z,\,y)\wedge R^*\,(x,\,z)
+\]
+
+So, in our implementation the groundness analysis (performed on the fly) chooses one of a few versions of transitive closure calculations.
+We call this optimization \emph{dynamic transitive closure ealuation}.
+
+With all of these optimizations enabled our solver finally can demonstrate a reasonable performance. We present the results of the evaluation
+in the next section\footnote{Source code is available online: \url{https://github.com/Lozov-Petr/JGS/tree/LOPSTR-2023}}. 
